--- a/basic home page/styles.css
+++ b/basic home page/styles.css
@@ -42,7 +42,7 @@ ul {
 /* CAROUSEL */
 #carouselExampleControls {
   padding: 50px;
-  background-color: #bf1818;
+  background-color: #F8F9FA;
 }
 
 /* FEATURES */
